BFA-1743 - Date picker alignment issue fixed

--- a/src/app/retirement-planning/get-started/get-started.component.scss
+++ b/src/app/retirement-planning/get-started/get-started.component.scss
@@ -1,6 +1,14 @@
 @import '../../../variables';
 @import '../../../mixins';
 
+app-navbar {
+  nav {
+    .navbar__title--mobile {
+      font-family: $muli-semi-bold !important;
+    }
+  }
+}
+
 app-get-started {
   .container-fluid {
     background-color: $white-color;
