--- a/src/app/retirement-planning/personalize-your-retirement/personalize-your-retirement.component.scss
+++ b/src/app/retirement-planning/personalize-your-retirement/personalize-your-retirement.component.scss
@@ -5,6 +5,10 @@ app-navbar {
   nav {
     border-bottom: solid 1px rgba(141, 154, 168, 0.16);
     box-shadow: none !important;
+
+    .navbar__title--mobile {
+      font-family: $muli-semi-bold !important;
+    }
   }
 }
 
